--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,5 +2,7 @@ name = "tzf-cf"
 main = "build/worker/shim.mjs"
 compatibility_date = "2024-09-03"
 
+send_metrics = false
+
 [build]
 command = "cargo install -q worker-build && worker-build --release"
