--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ tzf-rs = { git =  "https://github.com/ringsaturn/tzf-rs", rev = "3a82e5d", defau
 lazy_static = "1.5.0"
 getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1.0.209", features = ["derive"] }
-axum  = {version = "0.7", default-features = false, features = ["query"]}
+axum  = {version = "0.7", default-features = false, features = ["query", "json"]}
 tower-service = "0.3.2"
 console_error_panic_hook = { version = "0.1.1" }
 wasm-bindgen-futures = "0.4"
-reqwest = "0.12.7"
